# setup-python-test

./: action.yml  main.py  package.json  pyproject.toml  requirements.txt
.github/actions/composite-actions/: action.yml  requirements.txt
.github/workflows/: 925issuehardcode.yml  cachetest.yml  composite-action-ex.yml  debug.yml  issue1137.yml  issue361.yml  issue925.yml  issue969.yml  issue988.yml  issue993.yml  ksso.yml  macos-latest-test-customer-wf.yml  macos13-x86_x64.yml  piptest.yml  poetryTest1.yml  poststeptest.yml  python-install.yml  python3.12-linux-test.yml  python3.8-macos-latest-test.yml  pythonversions-test.yml  release-workflows.yaml  test#708.yml  test#914.yml  test#938.yml  test-cache-poetry.yml  test-python3.7.yml  test.yml  testPR.yml  test_python_build.yml  testcache.yml  testcachepip.yml  testcachepipv5.yml  testing925pr.yml  testpipcache.yml  testsetuptools3.8.yml  testubuntu24.yml  userposetsetupwithv4.yml  userpostsetup.yml  userpostsetupwithv3.yml  userpostsetupwithv5.yml  (+1 more)
.github/workflows/actions/composite-actions/: actions.yml
ksso/: main.py  pyproject.toml  success_message.html
requirements/: datasets.txt  required.txt
