
[tool.poetry]
name = "ksso"
version = "0.1.0"
description = "KSSO Project"
authors = ["mahalakshmi-rekadi@github.com"]

[tool.poetry.dependencies]
python = "^3.12"
pyinstaller = { version = "^5.0.0", python = ">=3.12,<3.13" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
